# MedVoice

./: README.md  pyproject.toml
api/: README.md  __init__.py  app.py
data/transcripts/: reference.json
frontend/: README.md  index.html
src/: __init__.py  dataset_builder.py  evaluate.py  llm_extractor.py  schema.py  stt_module.py
src/desafio_ia_medvoice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
