[project]
name = "desafio-ia-medvoice"
version = "0.1.0"
description = "Pipeline experimental de STT e LLM para equipamentos médicos"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20231117",
    "groq>=0.5.0",
    "pydantic>=2.0.0",
    "jiwer>=3.0.0",
    "gTTS>=2.5.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "black>=24.0.0"
]
